# SVDOperators

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  svd_2q_gates.jl
jlGateProperties/: gate_svd_helpers.jl  svd_2q_gates.jl
pyGateProperties/: Gate_Schmidt_Decomposition.ipynb  Gate_Schmidt_Decomposition.py  core.py  qiskit_utils.py  qubit_circuits.py  qubit_matrices.py  qudit_matrices.py
