[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "svdoperators-python"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "ipykernel",
    "jupytext",
    "numpy",
    "qiskit",
]

[tool.setuptools]
py-modules = []

[tool.jupytext]
formats = "ipynb,py:percent"
